# Copyright (c) 2020-2023 js-sandbox contributors. Zlib license.

[package]
name = "js-sandbox-ios"
version = "0.2.0"
description = "Execute JavaScript code from Rust in a secure sandbox, and transport data to/from JS plug-ins."
repository = "https://github.com/integration-os/js-sandbox-ios"
documentation = "https://docs.rs/js-sandbox-ios/latest/js_sandbox_ios"
authors = ["Jan Haller <bromeon@gmail.com>"]
license = "Zlib"
edition = "2021"
readme = "../README.md"

[dependencies]
js-sandbox-macros = { path = "../js-sandbox-macros", version = "=0.2.0" }
deno_core = "0.322.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
